[gd_scene load_steps=2 format=3 uid="uid://baxuwmtbc0q3i"]

[ext_resource type="Script" path="res://Scripts/UI/RecruitmentPanel.gd" id="1_recruitment_panel"]

[node name="RecruitmentPanel" type="Panel"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_recruitment_panel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.25, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reclutamiento de Unidades"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CityInfoContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CityNameLabel" type="Label" parent="VBoxContainer/CityInfoContainer"]
layout_mode = 2
text = "Ciudad: Buenos Aires"

[node name="CityResourcesLabel" type="Label" parent="VBoxContainer/CityInfoContainer"]
layout_mode = 2
text = "Manpower disponible: 150"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitsListContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitsListLabel" type="Label" parent="VBoxContainer/ContentContainer/UnitsListContainer"]
layout_mode = 2
text = "Unidades Disponibles"
horizontal_alignment = 1

[node name="UnitsScrollContainer" type="ScrollContainer" parent="VBoxContainer/ContentContainer/UnitsListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitsList" type="VBoxContainer" parent="VBoxContainer/ContentContainer/UnitsListContainer/UnitsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="DetailsContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsLabel" type="Label" parent="VBoxContainer/ContentContainer/DetailsContainer"]
layout_mode = 2
text = "Detalles de Unidad"
horizontal_alignment = 1

[node name="UnitDetailsContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer/DetailsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitNameLabel" type="Label" parent="VBoxContainer/ContentContainer/DetailsContainer/UnitDetailsContainer"]
layout_mode = 2
text = "Selecciona una unidad"

[node name="UnitStatsContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer/DetailsContainer/UnitDetailsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="RecruitButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Reclutar Unidad"
disabled = true

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Cancelar"